--- a/main.yml
+++ b/main.yml
@@ -22,3 +22,4 @@
     - import_tasks: tasks/vlc.yml
     - import_tasks: tasks/libreoffice.yml
     - import_tasks: tasks/sqlite3.yml
+    - import_tasks: tasks/vscode.yml
