--- a/main.yml
+++ b/main.yml
@@ -16,6 +16,7 @@
 
   tasks:
     - import_tasks: tasks/core-packages.yml
+    - import_tasks: tasks/dotfiles.yml
     - import_tasks: tasks/vlc.yml
     - import_tasks: tasks/libreoffice.yml
     - import_tasks: tasks/sqlite3.yml
