--- a/tasks/core-packages.yml
+++ b/tasks/core-packages.yml
@@ -6,10 +6,10 @@
     - install
     - core
 
-- name: "core: Install Terminal Packages (tmux, tree, stow)"
+- name: "core: Install Terminal Packages (picocom, tmux, tree, stow, fzf)"
   become: true
   apt:
-    name: ["tmux", "tree", "stow"]
+    name: ["picocom", "tmux", "tree", "stow", "fzf"]
   tags:
     - install
     - core
