Moved tmux to it's own task from core and added tmux tpm plugin.

--- a/main.yml
+++ b/main.yml
@@ -20,8 +20,6 @@
     - import_tasks: tasks/vlc.yml
     - import_tasks: tasks/libreoffice.yml
     - import_tasks: tasks/sqlite3.yml
-      when: install_sqlite3
+    - import_tasks: tasks/tmux.yml
     - import_tasks: tasks/vscode.yml
-      when: install_vscode
     - import_tasks: tasks/neovim.yml
-      when: install_neovim
