Updated to .dofiles run script name.

--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -12,4 +12,4 @@
 - name: "dotfiles: stow dotfiles"
   tags:
     - dotfiles
-  shell: cd $HOME/.dotfiles && ./ubuntu
+  shell: cd $HOME/.dotfiles && ./install
