--- a/main.yml
+++ b/main.yml
@@ -23,3 +23,4 @@
     - import_tasks: tasks/tmux.yml
     - import_tasks: tasks/vscode.yml
     - import_tasks: tasks/neovim.yml
+    - import_tasks: tasks/rust.yml
