--- a/main.yml
+++ b/main.yml
@@ -24,3 +24,4 @@
     - import_tasks: tasks/vscode.yml
     - import_tasks: tasks/neovim.yml
     - import_tasks: tasks/rust.yml
+    - import_tasks: tasks/docker.yml
