Updated docker task.

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -1,62 +1,94 @@
-#- name: Install aptitude
-#  become: true
-#  apt:
-#    name: aptitude
-#    state: latest
-#    update_cache: true
-#  tags:
-#    - docker
+# install packages to allow apt to use a repository over HTTPS:
+- name: Install docker packages
+  become: true
+  apt:
+    pkg:
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - software-properties-common
+    state: present
+  tags:
+    - docker
 
-#- name: Install required system packages
-#  become: true
-#  apt:
-#    pkg:
-#      - apt-transport-https
-#      - ca-certificates
-#      - curl
-#      - software-properties-common
-#      - python3-pip
-#      - virtualenv
-#      - python3-setuptools
-#    state: latest
-#    update_cache: true
-#  tags:
-#    - docker
-
-- name: "docker: Add Docker GPG apt Key"
+# curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
+- name: Add Docker s official GPG key
   become: true
   apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
+    url: https://download.docker.com/linux/debian/gpg
     state: present
   tags:
     - docker
 
-- name: "docker: Add Docker Repository"
+# apt-key fingerprint
+- name: Verify that we have the key with the fingerprint
+  become: true
+  apt_key:
+    id: 0EBFCD88
+    state: present
+  tags:
+    - docker
+
+# add-apt-repository
+- name: Set up the stable repository
   become: true
   apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu focal stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/debian stretch stable
     state: present
+    update_cache: yes
   tags:
     - docker
 
-- name: "docker: Update APT Repositories"
+# apt-get update
+- name: Update apt packages
   become: true
   apt:
-    force_apt_get: true
-    update_cache: true
-    state: present
+    update_cache: yes
   tags:
     - docker
 
-- name: "docker: Install docker-ce"
+# install docker-ce latetst verion
+- name: Install docker
+  become: true
   apt:
     name: docker-ce
+    state: present
+    update_cache: yes
   tags:
     - docker
 
-- name: "docker: Install Docker Module for Python"
+# sudo groupadd docker
+- name: Create "docker" group
   become: true
-  pip:
-    name: docker
+  group:
+   name: docker
+   state: present
+  tags:
+    - docker
+
+# sudo usermod -aG docker $USER
+- name: "docker: Add user to docker group"
+  become: true
+  ansible.builtin.user:
+    name: tmoore
+    groups: docker
+    append: true
+  tags:
+    - docker
+
+# install docker-compose 1.24.0 version, but you can specify the version you need & apply executable permissions to the binary
+- name: install docker-compose
+  become: true
+  get_url:
+    url: https://github.com/docker/compose/releases/download/1.24.0/docker-compose-{{ ansible_system }}-{{ ansible_userspace_architecture }}
+    dest: /usr/local/bin/docker-compose
+    mode: 'u+x,g+x'
+  tags:
+    - docker
+
+# you can also create a symbolic link to /usr/bin or any other directory in your path
+- name: Create symlink
+  become: true
+  file: src=/usr/local/bin/docker-compose dest=/usr/bin/docker-compose state=link
   tags:
     - docker
