Moved vscode extensions to a variable list.

--- a/tasks/vscode.yml
+++ b/tasks/vscode.yml
@@ -39,132 +39,9 @@
     name: "code"
     state: present
 
-# Extensions
-
-# Markdown
-- name: "vscode: Install vscode extension Markdown Previewer"
-  tags: vscode
-  register: result
-  shell: code --install-extension bierner.markdown-preview-github-styles
-  changed_when: '"successfully installed" in result.stdout'
-
-# XMl
-- name: "vscode: Install vscode extension XML"
-  tags: vscode
-  register: result
-  shell: code --install-extension redhat.vscode-xml
-  changed_when: '"successfully installed" in result.stdout'
-
-# YAML
-- name: "vscode: Install vscode extension YAML"
-  tags: vscode
-  register: result
-  shell: code --install-extension redhat.vscode-yaml
-  changed_when: '"successfully installed" in result.stdout'
-
-# TOML
-- name: "vscode: Install vscode extension Even Better TOML"
-  tags: vscode
-  register: result
-  shell: code --install-extension tamasfe.even-better-toml
-  changed_when: '"successfully installed" in result.stdout'
-
-# Ansible
-- name: "vscode: Install vscode extension Ansible"
-  tags: vscode
-  register: result
-  shell: code --install-extension redhat.ansible
-  changed_when: '"successfully installed" in result.stdout'
-
-# Python
-- name: "vscode: Install vscode extension Python"
-  tags: vscode
-  register: result
-  shell: code --install-extension ms-python.python
-  changed_when: '"successfully installed" in result.stdout'
-
-- name: "vscode: Install vscode extension Pylance"
-  tags: vscode
-  register: result
-  shell: code --install-extension ms-python.vscode-pylance
-  changed_when: '"successfully installed" in result.stdout'
-
-- name: "vscode: Install vscode extension Pylint"
-  tags: vscode
-  register: result
-  shell: code --install-extension ms-python.pylint
-  changed_when: '"successfully installed" in result.stdout'
-
-# IntelliCode
-- name: "vscode: Install vscode extension IntelliCode"
-  tags: vscode
-  register: result
-  shell: code --install-extension VisualStudioExptTeam.vscodeintellicode
-  changed_when: '"successfully installed" in result.stdout'
-
-- name: "vscode: Install vscode extension IntelliCode API"
-  tags: vscode
-  register: result
-  shell: code --install-extension VisualStudioExptTeam.intellicode-api-usage-examples
-  changed_when: '"successfully installed" in result.stdout'
-
-# C
-- name: "vscode: Install vscode extension C/C++"
-  tags: vscode
-  register: result
-  shell: code --install-extension ms-vscode.cpptools
-  changed_when: '"successfully installed" in result.stdout'
-
-- name: "vscode: Install vscode extension C/C++ Extension Pack"
-  tags: vscode
-  register: result
-  shell: code --install-extension ms-vscode.cpptools-extension-pack
-  changed_when: '"successfully installed" in result.stdout'
-
-- name: "vscode: Install vscode extension C/C++ Themes"
-  tags: vscode
-  register: result
-  shell: code --install-extension ms-vscode.cpptools-themes
-  changed_when: '"successfully installed" in result.stdout'
-
-# Makefile
-- name: "vscode: Install vscode extension Makefile Tools"
-  tags: vscode
-  register: result
-  shell: code --install-extension ms-vscode.makefile-tools
-  changed_when: '"successfully installed" in result.stdout'
-
-# CMake
-- name: "vscode: Install vscode extension CMake Tools"
-  tags: vscode
-  register: result
-  shell: code --install-extension ms-vscode.cmake-tools
-  changed_when: '"successfully installed" in result.stdout'
-
-# Analysers
-- name: "vscode: Install vscode extension CPP Check"
-  tags: vscode
-  register: result
-  shell: code --install-extension NathanJ.cppcheck-plugin
-  changed_when: '"successfully installed" in result.stdout'
-
-# Rust
-- name: "vscode: Install vscode extension Rust Analyser"
-  tags: vscode
-  register: result
-  shell: code --install-extension rust-lang.rust-analyzer
-  changed_when: '"successfully installed" in result.stdout'
-
-- name: "vscode: Install vscode extension Crates"
-  tags: vscode
-  register: result
-  shell: code --install-extension serayuzgur.crates
-  changed_when: '"successfully installed" in result.stdout'
-
-# Error
-- name: "vscode: Install vscode extension Error Lens"
-  tags: vscode
-  register: result
-  shell: code --install-extension usernamehw.errorlens
-  changed_when: '"successfully installed" in result.stdout'
-
+- name: "vscode: Install vscode extensions"
+  command: "code --install-extension '{{ item }}'"
+  with_items:
+    - "{{ vscode_extensions_ids }}"
+  register: vscode_result
+  changed_when: "'already installed' not in vscode_result.stdout"
