--- a/vars/vscode-extensions.yml
+++ b/vars/vscode-extensions.yml
@@ -1,34 +1,58 @@
 ---
 vscode_extensions_ids:
-# Markdown
+## Docker and Remote Development
+  - ms-azuretools.vscode-docker
+  - ms-vscode-remote.remote-containers
+  - ms-vscode-remote.remote-ssh
+  - ms-vscode-remote.remote-ssh-edit
+  - ms-vscode-remote.remote-wsl
+  - ms-vscode-remote.vscode-remote-extensionpack
+
+## General Development
+  - VisualStudioExptTeam.vscodeintellicode
+  - VisualStudioExptTeam.intellicode-api-usage-examples
+  - usernamehw.errorlens
+
+## Git Utilities
+  - eamodio.gitlens
+  - donjayamanne.githistory
+  - mhutchie.git-graph
+
+## Markdown
+  - DavidAnson.vscode-markdownlint
   - bierner.markdown-preview-github-styles
-# XML
+
+## XML
   - redhat.vscode-xml
-# YAML
+
+## YAML
   - redhat.vscode-yaml
-# TOML
+
+## TOML
   - tamasfe.even-better-toml
-# Ansible
+
+## Ansible
   - redhat.ansible
-# Python
+
+## Python Development
   - ms-python.python
   - ms-python.vscode-pylance
   - ms-python.pylint
-# IntelliCode
-  - VisualStudioExptTeam.vscodeintellicode
-  - VisualStudioExptTeam.intellicode-api-usage-examples
-# C
+
+## C Development
   - ms-vscode.cpptools
   - ms-vscode.cpptools-extension-pack
   - ms-vscode.cpptools-themes
-# Makefile
   - ms-vscode.makefile-tools
-# CMake
   - ms-vscode.cmake-tools
-# Analysers
   - NathanJ.cppcheck-plugin
-# Rust
+
+## Rust Development
   - rust-lang.rust-analyzer
   - serayuzgur.crates
-# Error
-  - usernamehw.errorlens
+
+## Spellchecking
+  - streetsidesoftware.code-spell-checker
+
+## Themes
+  - dracula-theme.theme-dracula
