--- a/tasks/core-packages.yml
+++ b/tasks/core-packages.yml
@@ -1,71 +1,45 @@
+---
 - name: "core: Install Text Editor Packages (nano, vim)"
   become: true
   apt:
     name: ["nano", "vim"]
-  tags:
-    - install
-    - core
 
 - name: "core: Install Terminal Packages (picocom, zsh, bash, tree, stow, fzf, tldr, bat)"
   become: true
   apt:
     name: ["picocom", "zsh", "bash", "tree", "stow", "fzf", "tldr", "bat"]
-  tags:
-    - install
-    - core
 
 - name: "core: Install Networking Packages (net-tools, curl, nmap, lighttpd)"
   become: true
   apt:
     name: ["net-tools", "curl", "nmap", "lighttpd"]
-  tags:
-    - install
-    - core
 
 - name: "core: Install Browser Packages (firefox)"
   become: true
   apt:
     name: "firefox"
-  tags:
-    - install
-    - core
 
 - name: "core: Install Version Control Packages (git, gitk, svn)"
   become: true
   apt:
     name: ["git", "gitk", "subversion"]
-  tags:
-    - install
-    - core
 
 - name: "core: Install Software Development Packages (build-essential, gcc, make, cmake, pkg-config, device-tree-compiler, u-boot-tools)"
   become: true
   apt:
     name: ["build-essential", "gcc", "make", "cmake", "pkg-config", "device-tree-compiler", "u-boot-tools"]
-  tags:
-    - install
-    - core
 
 - name: "core: Install Software Debugging Packages (gdb, gdb-multiarch, strace)"
   become: true
   apt:
     name: ["gdb", "gdb-multiarch", "strace"]
-  tags:
-    - install
-    - core
 
 - name: "core: Install Software Profiling Packages (oprofile, lttng-tools, valgrind)"
   become: true
   apt:
     name: ["oprofile", "lttng-tools", "valgrind"]
-  tags:
-    - install
-    - core
 
 - name: "core: Install Software Code Quality Packages (cppcheck, spellcheck, meld, doxygen, python3-sphinx, ctags)"
   become: true
   apt:
-    name: ["cppcheck", "shellcheck", "meld", "doxygen", "python3-sphinx", "ctags"]
-  tags:
-    - install
-    - core
+    name: ["cppcheck", "shellcheck", "meld", "doxygen", "python3-sphinx", "universal-ctags"]
