--- a/tasks/sqlite3.yml
+++ b/tasks/sqlite3.yml
@@ -1,13 +1,12 @@
+---
 - name: "sqlite3: Install sqlite3 package"
-  tags: sqlite3
-  apt:
+  become: true
+  ansible.builtin.apt:
     name: sqlite3
     state: latest
-  become: true
 
 - name: "sqlite3: Install sqlitebrowser package"
-  tags: sqlite3 sqlitebrowser
-  apt:
+  become: true
+  ansible.builtin.apt:
     name: sqlitebrowser
     state: latest
-  become: true
