--- a/tasks/vlc.yml
+++ b/tasks/vlc.yml
@@ -1,6 +1,6 @@
+---
 - name: "vlc: install vlc package"
-  tags: vlc
-  apt:
+  become: true
+  ansible.builtin.apt:
     name: vlc
     state: latest
-  become: true
