--- a/tasks/rust.yml
+++ b/tasks/rust.yml
@@ -1,19 +1,17 @@
 ---
-- name: "check if cargo is installed"
+- name: "rust: Check if cargo is installed"
   shell: command -v cargo
   register: cargo_exists
-  ignore_errors: yes
+  ignore_errors: true
 
-- name: "Download Installer"
+- name: "rust: Download installer"
+  when: cargo_exists is failed
   get_url:
     url: https://sh.rustup.rs
     dest: /tmp/sh.rustup.rs
     mode: '0755'
     force: 'yes'
-  when: cargo_exists is failed
 
-# - name: "install rust/cargo"
-#   when: cargo_exists is failed
-#   shell: /tmp/sh.rustup.rs -y
-#   tags:
-#     - rust
+- name: "rust: Install rust/cargo"
+  when: cargo_exists is failed
+  shell: /tmp/sh.rustup.rs -y
