--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -11,7 +11,7 @@
     state: present
 
 # curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
-- name: Add Docker s official GPG key
+- name: Add dockers official GPG key
   become: true
   apt_key:
     url: https://download.docker.com/linux/debian/gpg
