--- a/tasks/vscode.yml
+++ b/tasks/vscode.yml
@@ -1,43 +1,24 @@
 ---
-- name: "vscode: Install dependencies"
-  become: true
-  ansible.builtin.apt:
-    name:
-      - ca-certificates
-      - apt-transport-https
-    state: present
+- name: "vscode: Add vscode apt key"
+  ansible.builtin.apt_key:
+    url: "{{ vscode_apt_key_url }}"
+    keyring: "{{ vscode_apt_key_keyring }}"
 
-- name: "vscode: Create APT keyrings dir"
-  become: true
-  ansible.builtin.file:
-    path: '/etc/apt/keyrings'
-    state: directory
-    mode: 'u=rwx,go=rx'
-
-- name: "vscode: Install key"
-  become: true
-  ansible.builtin.get_url:
-    url: 'https://packages.microsoft.com/keys/microsoft.asc'
-    dest: '/etc/apt/keyrings/'
-    mode: 'u=rw,go=r'
-    force: true
-
-- name: "vscode: Install VS Code repo"
+- name: "vscode: Add vscode repo"
   become: true
   ansible.builtin.apt_repository:
-    repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/microsoft.asc] https://packages.microsoft.com/repos/code stable main"
+    repo: "{{ vscode_repo }}"
     filename: vscode
     state: present
 
-- name: "vscode: Install VS Code"
+- name: "vscode: Install vscode"
   become: true
   ansible.builtin.apt:
     name: "code"
     state: present
 
-- name: "vscode: Install VS Code extensions"
-  command: "code --install-extension '{{ item }}'"
-  with_items:
-    - "{{ vscode_extensions_ids }}"
+- name: "vscode: Install vscode extensions"
+  ansible.builtin.command: "code --install-extension '{{ item }}'"
+  with_items: "{{ vscode_extensions_ids }}"
   register: vscode_result
   changed_when: "'already installed' not in vscode_result.stdout"
