--- a/default.config.yml
+++ b/default.config.yml
@@ -2,6 +2,7 @@
 install_tmux: true
 install_python: true
 install_vscode: true
+install_picocom: true
 install_neovim: true
 install_rust: true
 install_docker: true
