Added git configuration task.

--- a/default.config.yml
+++ b/default.config.yml
@@ -1,4 +1,9 @@
 ---
+configure_git: false 
+git_email: "tomwmoore@hotmail.com"
+git_username: "Tom Moore"
+git_editor: "nvim"
+
 install_tmux: true
 install_python: true
 install_vscode: true
