--- a/main.yml
+++ b/main.yml
@@ -31,6 +31,11 @@
       tags: ['tmux']
       when: install_tmux
 
+    - name: Configure Git
+      ansible.builtin.import_tasks: tasks/git.yml
+      tags: ['git']
+      when: configure_git
+
     - name: Install Pip Packages
       ansible.builtin.import_tasks: tasks/python.yml
       tags: ['python']
