--- a/vars/extra-packages.yml
+++ b/vars/extra-packages.yml
@@ -26,6 +26,7 @@ extra_packages:
 ## Version Control Packages
 - git
 - subversion
+- git-extras
 
 ## Software Development Packages
 - build-essential
