--- a/vars/vscode.yml
+++ b/vars/vscode.yml
@@ -13,6 +13,9 @@ vscode_extensions_ids:
   - VisualStudioExptTeam.intellicode-api-usage-examples
   - usernamehw.errorlens
 
+## Yocto
+  - yocto-project.yocto-bitbake
+
 ## Git Utilities
   - eamodio.gitlens
   - donjayamanne.githistory
