--- a/default.config.yml
+++ b/default.config.yml
@@ -18,3 +18,5 @@ install_libreoffice: false
 install_sqlite3: false
 install_dracula_theme: true
 install_spotify: true
+
+install_nrf_vscode_extensions: false
