Added CSV and TSV column highlighting vscode extension.

--- a/vars/vscode.yml
+++ b/vars/vscode.yml
@@ -25,6 +25,9 @@ vscode_extensions_ids:
   - DavidAnson.vscode-markdownlint
   - bierner.markdown-preview-github-styles
 
+## CSV
+  - mechatroner.rainbow-csv
+
 ## XML
   - redhat.vscode-xml
 
