--- a/default.config.yml
+++ b/default.config.yml
@@ -19,5 +19,6 @@ install_sqlite3: false
 install_dracula_theme: true
 install_spotify: true
 install_kicad: false
+install_obsidian: true
 
 install_nrf_vscode_extensions: false
